# repopilot

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: eval_cases.jsonl  providers.codex.example.json  providers.demo.json  providers.shell.example.json
examples/reports/: arena-report.md
examples/sample_buggy_project/: test_calculator.py
examples/sample_config_project/: config.py  test_config.py
examples/sample_csv_project/: parser.py  test_parser.py
examples/sample_dedupe_project/: collections_utils.py  test_collections_utils.py
examples/sample_divide_project/: test_calculator.py
examples/sample_multiply_project/: test_calculator.py
examples/sample_slugify_project/: test_text_utils.py  text_utils.py
examples/sample_temperature_project/: temperature.py  test_temperature.py
repopilot/: __init__.py  cli.py  config.py  models.py  trace.py  wizard.py
repopilot/agents/: runner.py  tools.py
repopilot/eval/: arena.py  harness.py  provider_config.py  reporting.py  scoring.py
repopilot/providers/: __init__.py  base.py  demo.py  openai_provider.py  shell.py
repopilot/runtime/: repository.py  sandbox.py
tests/: test_arena.py  test_demo_runner.py  test_sandbox.py  test_scoring.py  test_wizard.py
