[project]
name = "repopilot"
version = "0.1.0"
description = "A sandboxed software engineering agent that turns GitHub issues into tested patches."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "typer>=0.12",
    "rich>=13.7",
    "gitpython>=3.1",
    "unidiff>=0.7",
]

[project.optional-dependencies]
openai = ["openai>=1.93.0"]
dev = ["pytest>=8.2", "ruff>=0.5"]

[project.scripts]
repopilot = "repopilot.cli:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
